<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >



     <Button
         android:id="@+id/button1"
         android:layout_width="270dp"
         android:layout_height="60dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="102dp"
         android:background="@drawable/buttonstyle"
         android:drawableLeft="@drawable/biking_icon"
         android:onClick="toMapClick"
         android:paddingLeft="15dp"
         android:paddingRight="30dp"
         android:text="@string/toMapText"
         android:textColor="#FFFFFF"
         android:textSize="25sp" />
     
          <Button
         android:id="@+id/button2"
         android:layout_width="250dp"
         android:layout_height="60dp"
         android:layout_below="@+id/button1"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="26dp"
         android:background="@drawable/buttonstyle"
         android:drawableLeft="@drawable/biking_icon"
         android:onClick="toMapClick"
         android:paddingLeft="15dp"
         android:paddingRight="30dp"
         android:text="@string/savedLocations"
         android:textColor="#FFFFFF"
         android:textSize="20sp" />

          <TextView
              android:id="@+id/textView1"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_alignLeft="@+id/button2"
              android:layout_alignRight="@+id/button2"
              android:layout_below="@+id/button2"
              android:layout_marginTop="62dp"
              android:text="@string/main_text"
              android:textSize="20sp"
              android:textAlignment="center"
              android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>